[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UI/LandingScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainEditor.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Font/Inter-VariableFont_slnt,wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_top = 20.0

[sub_resource type="Theme" id=5]
Button/fonts/font = SubResource( 2 )
Label/fonts/font = SubResource( 3 )
WindowDialog/fonts/title_font = SubResource( 4 )
WindowDialog/styles/panel = SubResource( 6 )

[node name="LandingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgramTitleLabe" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -677.0
margin_top = 51.0
margin_right = 677.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
text = "CustomNPCS Node Based Dialog Editor"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -59.0
margin_right = 473.0
margin_bottom = 51.0

[node name="Open Environment" type="Button" parent="Panel/VBoxContainer"]
margin_right = 456.0
margin_bottom = 50.0
rect_min_size = Vector2( 435, 50 )
text = "Open Environment"

[node name="FileDialog" type="FileDialog" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -389.5
margin_top = -308.5
margin_right = 389.5
margin_bottom = 308.5
rect_min_size = Vector2( 150, 52.5 )
theme = SubResource( 5 )
window_title = "Open a Directory"
mode = 2
access = 2
show_hidden_files = true

[node name="InvalidFolderWarning" type="PopupDialog" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.0
margin_top = -158.0
margin_right = 326.0
margin_bottom = 259.0

[node name="Label" type="Label" parent="Panel/InvalidFolderWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "The selected folder is not a valid CustomNPCS environment.

You may continue, but you will not be able to access named quests, factions, or existing dialogs, and exported dialogs will not properly index their IDs, with will cause conflicts if you manually move them into a world.

Do you wish to proceed?"
align = 1
valign = 1
autowrap = true

[node name="Confirm" type="Button" parent="Panel/InvalidFolderWarning"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 137.0
margin_top = -42.0
margin_right = 199.0
margin_bottom = -22.0
text = "Confirm"

[node name="Cancel" type="Button" parent="Panel/InvalidFolderWarning"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -177.0
margin_top = -45.0
margin_right = -123.0
margin_bottom = -25.0
text = "Cancel"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 122.0
margin_top = 170.0
margin_right = 459.0
margin_bottom = 199.0
text = "Recently Opened Environments"

[node name="PrevDirsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.43
anchor_top = 0.246
anchor_right = 0.964
anchor_bottom = 1.0
margin_left = 84.68
margin_top = 60.4
margin_right = -2.13599
margin_bottom = 188.0
rect_min_size = Vector2( 460, 580 )

[connection signal="pressed" from="Panel/VBoxContainer/Open Environment" to="." method="_on_Open_Environment_pressed"]
[connection signal="confirmed" from="Panel/FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="dir_selected" from="Panel/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="Panel/InvalidFolderWarning/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="button_up" from="Panel/InvalidFolderWarning/Cancel" to="." method="_on_Cancel_button_up"]
